--- a/website.css
+++ b/website.css
@@ -52,8 +52,7 @@
 html {
 position:relative;
 height:100%;
-width:100%;
-width: auto !important;
+width:100% !important;
   overflow-x: hidden !important;
 }
 
@@ -61,7 +60,7 @@ body{
 	position: absolute;
 	min-width:100%;
 	min-height:100%;
-	width: auto !important;
+	width: 100% !important;
   overflow-x: hidden !important;
 }
 
